; ModuleID = '/home/carl/AnghaBench/git/extr_merge-blobs.c_fill_mmfile_blob.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-blobs.c_fill_mmfile_blob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i8* }
%struct.blob = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@OBJ_BLOB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, %struct.blob*)* @fill_mmfile_blob to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fill_mmfile_blob(%struct.TYPE_5__* %0, %struct.blob* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.blob*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store %struct.blob* %1, %struct.blob** %5, align 8
  %9 = load %struct.blob*, %struct.blob** %5, align 8
  %10 = getelementptr inbounds %struct.blob, %struct.blob* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = call i8* @read_object_file(i32* %11, i32* %8, i64* %7)
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %30

16:                                               ; preds = %2
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* @OBJ_BLOB, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %16
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @free(i8* %21)
  store i32 -1, i32* %3, align 4
  br label %30

23:                                               ; preds = %16
  %24 = load i8*, i8** %6, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 1
  store i8* %24, i8** %26, align 8
  %27 = load i64, i64* %7, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  store i64 %27, i64* %29, align 8
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %23, %20, %15
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i8* @read_object_file(i32*, i32*, i64*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
